# TP1-final

./: .gitignore  main.py  pyproject.toml
TP1PromptEngineering-main/: main.py  pyproject.toml  tp1.ipynb
