[project]
name = "tp1promptengineering-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=6.31.0",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "matplotlib>=3.9.4",
    "openai>=2.32.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]
